vlib/v/checker/tests/wrong_struct_declare3_err.vv
struct Foo {
}

struct Bar {
        __global foos []Foo
}
